Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39784

QTextInlineObject documentation is invalid.

    XMLWordPrintable

Details

    Description

      I suggest in file
      qtbase/src/gui/text/qtextlayout.cpp

      change the code of codumentation

      /*!
          \class QTextInlineObject
          \reentrant
      
          \brief The QTextInlineObject class represents an inline object in
          a QTextLayout.
          \inmodule QtGui
      
          \ingroup richtext-processing
      
          This class is only used if the text layout is used to lay out
          parts of a QTextDocument.
      
          The inline object has various attributes that can be set, for
          example using, setWidth(), setAscent(), and setDescent(). The
          rectangle it occupies is given by rect(), and its direction by
          isRightToLeft(). Its position in the text layout is given by at(),
          and its format is given by format().
      */
      

      to a similar code

      /*!
          \class QTextInlineObject
          \reentrant
      
          \brief The QTextInlineObject class represents an inline object in
          a QAbstractTextDocumentLayout.
          \inmodule QtGui
      
          \ingroup richtext-processing
      
          This class is only used if the text layout
          QAbstractTextDocumentLayout is used to lay out parts of a
          QTextDocument.
      
          The inline object has various attributes that can be set, for
          example using, setWidth(), setAscent(), and setDescent(). The
          rectangle it occupies is given by rect(), and its direction by
          isRightToLeft(). Its position in the text layout is given by
          textPosition(), and its format is given by format().
      */
      

      Changes is for QAbstractTextDocumentLayout and textPosition().

      Attachments

        For Gerrit Dashboard: QTBUG-39784
        # Subject Branch Project Status CR V

        Activity

          People

            ablasche Alex Blasche
            nikitadevnet Nikita DevNet
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes